Delphi/Lib/XCGUI.pas

function XDraw_SetBkMode (hDraw:Integer;bTransparent:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDraw_EnableSmoothingMode (hDraw:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XDraw_CreateSolidBrush (hDraw:Integer;crColor:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XDraw_CreatePen (hDraw:Integer;fnPenStyle:Integer;nWidth:Integer;crColor:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XDraw_CreateRectRgn (hDraw:Integer;nLeftRect:Integer;nTopRect:Integer;nRightRect:Integer;nBottomRect:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XDraw_CreateRoundRectRgn (hDraw:Integer;nLeftRect:Integer;nTopRect:Integer;nRightRect:Integer;nBottomRect:Integer;nWidthEllipse:Integer;nHeightEllipse:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XDraw_CreatePolygonRgn (hDraw:Integer;pPt:TPOINT;cPoints:Integer;fnPolyFillMode:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XDraw_SelectClipRgn (hDraw:Integer;hRgn:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDraw_FillRect (hDraw:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_FillRectColor (hDraw:Integer;pRect:TRECT;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XDraw_FillRgn (hDraw:Integer;hrgn:Integer;hbr:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_FillEllipse (hDraw:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawEllipse (hDraw:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_FillRoundRect (hDraw:Integer;pRect:TRECT;nWidth:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawRoundRect (hDraw:Integer;pRect:TRECT;nWidth:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_Rectangle (hDraw:Integer;nLeftRect:Integer;nTopRect:Integer;nRightRect:Integer;nBottomRect:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawGroupBox_Rect (hDraw:Integer;pRect:TRECT;pName:PWideChar;textColor:Integer;textAlpha:Byte;pOffset:TPOINT);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawGroupBox_RoundRect (hDraw:Integer;pRect:TRECT;pName:PWideChar;textColor:Integer;textAlpha:Byte;pOffset:TPOINT;nWidth:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_GradientFill2 (hDraw:Integer;color1:Integer;alpha1:Byte;color2:Integer;alpha2:Byte;pRect:TRECT;mode:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_GradientFill4 (hDraw:Integer;color1:Integer;color2:Integer;color3:Integer;color4:Integer;pRect:TRECT;mode:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_GradientFill (hDraw:Integer;pPoints:TPOINTF;nCount:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XDraw_FrameRgn (hDraw:Integer;hrgn:Integer;hbr:Integer;nWidth:Integer;nHeight:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_FrameRect (hDraw:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_FocusRect (hDraw:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawLine (hDraw:Integer;x1:Integer;y1:Integer;x2:Integer;y2:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_MoveToEx (hDraw:Integer;X:Integer;Y:Integer;lpPoint:TPOINT) : LongBool;stdcall;far; external 'xcgui.dll';
function XDraw_LineTo (hDraw:Integer;nXEnd:Integer;nYEnd:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XDraw_Polyline (hDraw:Integer;pArrayPt:TPOINT;arrayPtSize:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_Dottedline (hDraw:Integer;x1:Integer;y1:Integer;x2:Integer;y2:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_SetPixel (hDraw:Integer;X:Integer;Y:Integer;crColor:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDraw_Check (hDraw:Integer;x:Integer;y:Integer;color:Integer;bCheck:LongBool);stdcall;far; external 'xcgui.dll';
function XDraw_DrawIconEx (hDraw:Integer;xLeft:Integer;yTop:Integer;hIcon:Integer;cxWidth:Integer;cyWidth:Integer;istepIfAniCur:Integer;hbrFlickerFreeDraw:Integer;diFlags:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XDraw_BitBlt (hDrawDest:Integer;nXDest:Integer;nYDest:Integer;nWidth:Integer;nHeight:Integer;hdcSrc:Integer;nXSrc:Integer;nYSrc:Integer;dwRop:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XDraw_BitBlt2 (hDrawDest:Integer;nXDest:Integer;nYDest:Integer;nWidth:Integer;nHeight:Integer;hDrawSrc:Integer;nXSrc:Integer;nYSrc:Integer;dwRop:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XDraw_AlphaBlend (hDraw:Integer;nXOriginDest:Integer;nYOriginDest:Integer;nWidthDest:Integer;nHeightDest:Integer;hdcSrc:Integer;nXOriginSrc:Integer;nYOriginSrc:Integer;nWidthSrc:Integer;nHeightSrc:Integer;alpha:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XDraw_TriangularArrow (hDraw:Integer;align:Integer;x:Integer;y:Integer;width:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawPolygon (hDraw:Integer;points:TPOINT;nCount:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawPolygonF (hDraw:Integer;points:TPOINTF;nCount:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_FillPolygon (hDraw:Integer;points:TPOINT;nCount:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_FillPolygonF (hDraw:Integer;points:TPOINTF;nCount:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_Image (hDraw:Integer;hImage:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_Image2 (hDraw:Integer;hImage:Integer;x:Integer;y:Integer;width:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_ImageStretch (hDraw:Integer;hImage:Integer;x:Integer;y:Integer;width:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_ImageAdaptive (hDraw:Integer;hImage:Integer;pRect:TRECT;bOnlyBorder:LongBool);stdcall;far; external 'xcgui.dll';
procedure XDraw_ImageExTile (hDraw:Integer;hImage:Integer;pRect:TRECT;flag:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_ImageSuper (hDraw:Integer;hImage:Integer;pRect:TRECT;bClip:LongBool);stdcall;far; external 'xcgui.dll';
procedure XDraw_ImageSuper2 (hDraw:Integer;hImage:Integer;pRcDest:TRECT;pSrcRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawText (hDraw:Integer;lpString:PWideChar;nCount:Integer;lpRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XDraw_DrawTextUnderline (hDraw:Integer;lpString:PWideChar;nCount:Integer;lpRect:TRECT;colorLine:Integer;alphaLine:Byte);stdcall;far; external 'xcgui.dll';
procedure XDraw_TextOut (hDraw:Integer;nXStart:Integer;nYStart:Integer;lpString:PWideChar;cbString:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_TextOutEx (hDraw:Integer;nXStart:Integer;nYStart:Integer;lpString:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XDraw_TextOutA (hDraw:Integer;nXStart:Integer;nYStart:Integer;lpString:PChar);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetAlpha (hDraw:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetAlphaEx (hdc:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_RegEventEx (hEle:Integer;pEvent:Integer);stdcall;far; external 'xcgui.dll';
function XEle_RemoveEventEx (hEle:Integer;pEvent:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_RegEventC (hEle:Integer;nEvent:Integer;pFun:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_RegEventC1 (hEle:Integer;nEvent:Integer;pFun:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_RegEventC2 (hEle:Integer;nEvent:Integer;pFun:Integer);stdcall;far; external 'xcgui.dll';
function XEle_RemoveEventC (hEle:Integer;nEvent:Integer;pFun:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SendEvent (hEle:Integer;hEventEle:Integer;nEvent:Integer;wParam:Integer;lParam:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_PostEvent (hEle:Integer;hEventEle:Integer;nEvent:Integer;wParam:Integer;lParam:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsShow (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnable (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnableFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsDrawFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnableEvent_XE_PAINT_END (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsMouseThrough (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsBkTransparent (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsKeyTab (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsSwitchFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnable_XE_MOUSEWHEEL (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_Enable (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableDrawFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableEvent_XE_PAINT_END (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableBkTransparent (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableMouseThrough (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableKeyTab (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableSwitchFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableEvent_XE_MOUSEWHEEL (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XEle_SetRect (hEle:Integer;pRect:TRECT;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetRectEx (hEle:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetRectLogic (hEle:Integer;pRect:TRECT;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_GetRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetRectLogic (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetClientRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetWndClientRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XEle_GetWidth (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_RectWndClientToEleClient (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_PointWndClientToEleClient (hEle:Integer;pPt:TPOINT);stdcall;far; external 'xcgui.dll';
procedure XEle_RectClientToWndClient (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_PointClientToWndClient (hEle:Integer;pPt:TPOINT);stdcall;far; external 'xcgui.dll';
function XEle_AddEle (hEle:Integer;hChildEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_InsertEle (hEle:Integer;hChildEle:Integer;hDestEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_RemoveEle (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_AddShape (hEle:Integer;hShape:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetZOrder (hEle:Integer;index:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetZOrderEx (hEle:Integer;hDestEle:Integer;nType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
